fix: update Item Entity
